# ProjectRedux

./: CAN.cpp  CMakeLists.txt  ReadMe.cpp  ReadMe.md
include/:  Socket.h  BMCCommunication.h  CanCommunication.h  CanDefs.h  CanSocket.h
src/: BMCCommunication.cpp  CMakeLists.txt  CanCommunication.cpp  CanSocket.cpp  Socket.cpp  main.cpp
